--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "codibara",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://nosora0422.github.io/codibara/#",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
